cmd/shared/libgogit.h

extern void GitCloneOptionsNew(long long* handleOut);
extern char* GitCloneOptionsSetURL(long long handle, char* val);
extern char* GitCloneOptionsSetAuth(long long handle, long long authHandle);
extern char* GitCloneOptionsSetRemoteName(long long handle, char* val);
extern char* GitCloneOptionsSetReferenceName(long long handle, char* val);
extern char* GitCloneOptionsSetSingleBranch(long long handle, int val);
extern char* GitCloneOptionsSetMirror(long long handle, int val);
extern char* GitCloneOptionsSetNoCheckout(long long handle, int val);
extern char* GitCloneOptionsSetDepth(long long handle, int val);
extern char* GitCloneOptionsSetBare(long long handle, int val);
extern char* GitCloneOptionsSetInsecureSkipTLS(long long handle, int val);
extern char* GitCloneOptionsSetShared(long long handle, int val);
extern char* GitCloneOptionsSetTags(long long handle, int val);
extern void GitCloneOptionsFree(long long handle);
extern void GitFetchOptionsNew(long long* handleOut);
extern char* GitFetchOptionsSetRemoteName(long long handle, char* val);
extern char* GitFetchOptionsSetRemoteURL(long long handle, char* val);
extern char* GitFetchOptionsSetDepth(long long handle, int val);
extern char* GitFetchOptionsSetAuth(long long handle, long long authHandle);
extern char* GitFetchOptionsSetTags(long long handle, int val);
extern char* GitFetchOptionsSetForce(long long handle, int val);
extern char* GitFetchOptionsSetInsecureSkipTLS(long long handle, int val);
extern char* GitFetchOptionsSetPrune(long long handle, int val);
extern void GitFetchOptionsFree(long long handle);
extern void GitCheckoutOptionsFree(long long handle);
extern void GitCommitOptionsNew(long long* handleOut);
extern char* GitCommitOptionsSetAll(long long handle, int val);
extern char* GitCommitOptionsSetAllowEmptyCommits(long long handle, int val);
extern char* GitCommitOptionsSetSigner(long long handle, long long signerHandle);
extern char* GitCommitOptionsSetAmend(long long handle, int val);
extern char* GitCommitOptionsSetAuthorNameEmail(long long handle, char* name, char* email);
extern char* GitCommitOptionsSetCommitterNameEmail(long long handle, char* name, char* email);
extern void GitCommitOptionsFree(long long handle);
extern void GitCreateTagOptionsNew(long long* handleOut);
extern char* GitCreateTagOptionsSetMessage(long long handle, char* val);
extern char* GitCreateTagOptionsSetTaggerNameEmail(long long handle, char* name, char* email);
extern void GitCreateTagOptionsFree(long long handle);
extern void GitCleanOptionsNew(long long* handleOut);
extern char* GitCleanOptionsSetDir(long long handle, int val);
extern void GitCleanOptionsFree(long long handle);
extern void GitLogOptionsNew(long long* handleOut);
extern char* GitLogOptionsSetFrom(long long handle, char* val);
extern char* GitLogOptionsSetTo(long long handle, char* val);
extern char* GitLogOptionsSetOrder(long long handle, int val);
extern char* GitLogOptionsSetAll(long long handle, int val);
extern void GitListOptionsNew(long long* handleOut);
extern char* GitListOptionsSetAuth(long long handle, long long authHandle);
extern char* GitListOptionsSetInsecureSkipTLS(long long handle, int val);
extern char* GitListOptionsSetTimeout(long long handle, int val);
extern void GitListOptionsFree(long long handle);